# DE_ITMO_2025

./: .gitignore  README.md  data_loader.py  data_processing.py  environment.yml  main_project.py  pyproject.toml  write_to_db.py
api_example/: README.md  api_loader.py  api_saver.py  api_user_input.py  main_api.py
notebooks/: EDA.ipynb
src/: extract.py  load.py  main.py  transform.py  validate.py
tests/: data_loader_test.py  test_data.ipynb
